@@ -7,6 +7,7 @@
   * sign_out_via is available in the router to configure the method used for sign out (by github.com/martinrehfeld)
   * Improved Ajax requests handling in failure app (by github.com/spastorino)
   * Add reply-to to e-mail headers by default
+  * Add request_keys to easily use request specific values (like subdomain) in authentication
 
 * bugfix
   * after_sign_in_path_for always receives a resource
